<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ApTic</string>
    <string name="action_settings">Settings</string>

    <string name="master_pin">5284</string>

    <string name="username">Username</string>
    <string name="username_hint">4 to 12 Characters</string>
    <string name="username_warning">Username must be between 4 and 12 characters</string>
    <string name="pin">Pin</string>
    <string name="pin_hint">4 digits</string>
    <string name="recipient">Recipient\'s E-mail</string>
    <string name="recipient_hint">Must be valid e-mail</string>
    <string name="number">Recipient\'s Mobile Number</string>
    <string name="number_hint">To receive MMS</string>
    <string name="incorrect">Incorrect username/pin</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>

    <string name="pref_signed_up">prefIsSignedUp</string>
    <string name="pref_user">prefUsername</string>
    <string name="pref_pin">prefPin</string>
    <string name="pref_recipient">prefRecipient</string>

    <string name="enable_network">Please enable network.</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_message">How would you like to send this?</string>
    <string name="message_failed">Message failed to send.</string>
    <string name="message_success">Message sent!</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>

    <string name="emoticons">Emoticons</string>
    <string name="recently_used">Recently Used</string>
    <string name="logs">Logs</string>
    <string name="send">Send</string>

    <string name="welcome_welcome">Welcome to ApTic.</string>

    <string name="welcome_intro">ApTic makes contacting your mental health team easy.\n
            \nPressing the send message button allows you to view
        your emoticon list and make a communication.
        Once the on-call Duty Person receives the emoticon, the Early Intervention Team
        will contact you as soon as possible.</string>

    <string name="welcome_extra">Useful information:\n\nEarly Intervention Service opening times:\n\n
        Mon-Fri: 8am-8pm\n\n
        Weekends and Bank Holidays: 10am - 6pm</string>




</resources>
