<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:paddingTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername_login"
        android:hint="@string/username_hint"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="12"
        android:backgroundTint="@color/accent_material_light"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/etPin_login"
        android:layout_gravity="center_horizontal"
        android:hint="@string/pin_hint"
        android:password="true"
        android:textAlignment="center"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="4"
        android:numeric="integer"
        android:backgroundTint="@color/accent_material_light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal">

        <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkboxRemember"
            android:backgroundTint="@color/accent_material_light"
            android:buttonTint="@color/accent_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember Username?"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/bLogin"
        android:layout_gravity="center_horizontal"
        android:onClick="logIn"/>


</LinearLayout>